Improve Bottom Navigation Bar UI

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,7 @@
     </style>
 
     <style name="Theme.WizzMate" parent="Base.Theme.WizzMate" />
+    <style name="Item.Active.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">@color/selectedItem</item>
+    </style>
 </resources>
