--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primaryColor">#048547</color>
+    <color name="selectedItem">#046F3B</color>
     <color name="grey">#B5B5B5</color>
 </resources>
