Fixing Search Feature bugs

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,10 +15,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/item_wrapper_bg"
-        android:clickable="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
         android:hint="@string/cari_lokasi"
+        android:queryHint="@string/cari_lokasi"
         android:iconifiedByDefault="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
